force-app/main/default/objects/Exchange__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <defaultValue>&quot;Exchange 7 Day Notice&quot;</defaultValue>
    <description>Not used in this version :)</description>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>