force-app/main/default/objects/Exchange__c/fields/Exchange_Admin__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the user who will be running the exchange going forward. Make sure they have the right permission sets!</inlineHelpText>
    <label>Exchange Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>