force-app/main/default/objects/Exchange__c/fields/Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Date__c</fullName>
    <inlineHelpText>This is the deadline that all of the gifts need to be received by</inlineHelpText>
    <label>Exchange Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>