force-app/main/default/objects/Exchange__c/fields/How_to_Exchange__c.field-meta.xml
<CustomField>
    <fullName>How_to_Exchange__c</fullName>
    <inlineHelpText>How do should the gifts be exchanged?</inlineHelpText>
    <label>How to Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>By Mail</fullName>
            </value>
            <value>
                <fullName>In Person and/or By Mail</fullName>
            </value>
            <value>
                <fullName>Other (See Rules)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>