force-app/main/default/objects/Exchange__c/fields/Matching_Date__c.field-meta.xml
<CustomField>
    <fullName>Matching_Date__c</fullName>
    <inlineHelpText>This is the date the fancy matching algorithm will run and you will receive your giftee.</inlineHelpText>
    <label>Matching Date</label>
    <type>Date</type>
</CustomField>