force-app/main/default/objects/Exchange__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <inlineHelpText>Set some guidelines for your exchange (ex. the types of gifts).</inlineHelpText>
    <label>Rules</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>