force-app/main/default/objects/Exchange__c/fields/Signup_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Signup_Deadline__c</fullName>
    <inlineHelpText>This is the LAST DAY to sign up for or drop from the exchange as a participant!</inlineHelpText>
    <label>Signup Deadline</label>
    <type>Date</type>
</CustomField>