force-app/main/default/objects/Exchange__c/fields/Spending_Target__c.field-meta.xml
<CustomField>
    <fullName>Spending_Target__c</fullName>
    <inlineHelpText>This is the maximum value guideline of the gifts to be exchanged.</inlineHelpText>
    <label>Spending Target (without shipping)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>