force-app/main/default/objects/Exchange__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sign Ups Open</fullName>
                <default>true</default>
                <label>Sign Ups Open</label>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Names Swapped</fullName>
            </value>
            <value>
                <fullName>Gifts Exchanged!</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>