force-app/main/default/objects/Exchange__c/validationRules/Require_something_in_this_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_something_in_this_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Exchange_Admin__c)</errorConditionFormula>
    <errorDisplayField>Exchange_Admin__c</errorDisplayField>
    <errorMessage>You must specify an Exchange Admin.</errorMessage>
</ValidationRule>