force-app/main/default/objects/Exchange__c/listViews/All_Exchanges.listView-meta.xml
<ListView>
    <fullName>All_Exchanges</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Exchanges</label>
</ListView>